# axle-cli

./: .gitignore  .pages.toml  CLAUDE.md  INTELLIGENT_DISCOVERY.md  LICENSE  OPEN_SOURCE_READY.md  README.md  TEST_RESULTS.md  pages.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
axle/: __init__.py  axle.py  code_reviewer.py  config.py  install_axle.py  interactive.py  security_scan.py  tool_discoverer.py  tool_metadata.py  tool_validator.py
docs/: CODE_REVIEW.md  changelog.md  commands.md  contributing.md  index.md  installation.md  pypi-guide.md  security.md  troubleshooting.md  usage.md
scripts/: axle.py  install_axle.py  security_scan.py
tools/: 01_seo_keyword_checker.py  02_meta_tag_auditor.py  03_daily_life_hack_generator.py  __init__.py  competitor_analysis.py  content_brief_generator.py  content_length_benchmarker.py  content_optimizer.py  example_simple_calculator.py
website/: CLOUDFLARE_DEPLOYMENT.md  README.md  _headers  _redirects  community.html  docs.html  faq.html  index.html  wrangler.jsonc  wrangler.toml
website/css/: style.css
website/js/: main.js
website/pages/: community.html  docs.html  faq.html
